# trabalho05

./: CDELTAT.f90  CMakeLists.txt  CVREAL.f90  MMMASG.f90  MMMASL.f90  MMRIGG.f90  MMRIGL.f90  MMROT.f90  MVDESL.f90  MVESFG.f90  MVESFL.f90  RESTR.f90  SPTRAN.f90  main.f90  solver.f90
